# golden-path

./: .gitignore  ADR.md  CODEOWNERS  CONTRIBUTING.md  README.md  package-lock.json  package.json  tsconfig.json
.kiro/specs/: pr-pipeline.md
.kiro/steering/: product.md  tech.md
cli/: README.md  pyproject.toml
cli/src/gp/: git_hooks.py  main.py  manifest.py  policy.py  vcs.py
cli/src/gp/commands/: branch.py  check.py  hooks.py  init_.py
cli/tests/: conftest.py  test_commands.py  test_manifest.py  test_policy.py
src/: index.ts
src/constructs/: index.ts  platform-function.ts  platform-http-gateway.ts
src/dora/: emitter.ts  index.ts  types.ts
src/workflows/: generate.ts  index.ts  integration-pipeline.ts  pr-pipeline.ts  types.ts
test/constructs/: platform-function.test.ts
test/workflows/: pr-pipeline.test.ts
