[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "golden-path-cli"
version = "0.1.0"
description = "Golden Path Developer CLI — enforce engineering conventions across teams"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.7",
]

[project.scripts]
gp = "gp.main:cli"

[project.urls]
Repository = "https://github.com/JulioElCesar/golden-path"

[tool.hatch.build.targets.wheel]
packages = ["src/gp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
